2012-03-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Avoid using a 'config.site' file.

2009-12-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Replace the obsolete $(mkdir_p) by $(MKDIR_P).

2009-06-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* freetype-1.5/configure.in, freetype-1.5/configure: avoid lots
	of gcc warnings, adding -fno-strict-aliasing to XX_CFLAGS.

2009-04-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Adapt to TL2009 build system.

2008-01-31  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Convert from autoconf-2.13 to autoconf-2.59+:
	* configure.in: Adapt to autoconf-2.59+ syntax,
	revert KPSE_CONFIG_FILES to AC_CONFIG_FILES.
	* net.4: Replaced AC_DEFUN(FOO,...) by AC_DEFUN([FOO],...).
	* aclocal.m4: Regenerated (aclocal).
	* config.guess, config.sub, ltmain.sh:
	Regenerated (libtoolize -if).
	* configure: Regenerated (autoconf).

2008-01-23  Karl Berry  <karl@tug.org>

	* freetype.ac: call AC_PROG_CPP, else when used from
	ttf2pk/configure --with-system-freetype, CPP is not defined.
	Report from Jonathan Kew, 3 Nov 2006 11:08:13 ff.
